syntax = "proto3";

package proto;

import "google/api/annotations.proto";

service Rpc {
    rpc Put (PutRequest) returns (PutReply) {
        option (google.api.http) = {
			post: "/put"
			body: "*"
		};
    }

    rpc Pull (stream PullRequest) returns (stream PullReply) {
        option (google.api.http) = {
			get: "/pop"
		};
    }
}

message PutRequest {
    bytes topic = 1;
    bytes message = 2;
    bytes tag = 3;
    int32 queueId = 4;
    int32 delay = 5;
}

message PutReply {
    int64 messageId = 1;
}

message PullRequest {
    bytes topic = 1;
    bytes group = 2;
    bytes tag = 3;
    int32 queueId = 4;
    int32 pullNum = 5;
    int64 readOffset = 6;
}

message PullReply {
    int64 messageId = 1;
    bytes message = 2;
}

